--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -1,7 +1,7 @@
-on: push
+- on: push
   steps:
-  -  uses: actions/checkout@v3
-  - uses: actions/setup-python@v4
-    with:
-      python-version: '3.10' 
-    - run: python fuzz.py
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.10' 
+        - run: python fuzz.py
