--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -1,7 +1,20 @@
-- on: push
-  steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
-      with:
-        python-version: '3.10' 
-        - run: python fuzz.py
+name: Commit Validation
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
+
+jobs:
+  check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.0.2
+
+      - uses: actions/setup-python@v4.2.0
+        with:
+          python-version: "3.10"
+
+      - run: python fuzz.py
+        shell: bash
